tests/functional/lang/parse-fail-dup-attrs-2.err.exp
error: attribute 'x' already defined at /pwd/parse-fail-dup-attrs-2.nix:9:5
       at /pwd/parse-fail-dup-attrs-2.nix:10:18:
            9|     x = 789;
           10|     inherit (as) x;
             |                  ^
           11|   };
